syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/bbs/models";


message ProtoPortRange {
  uint32 start = 1 [json_name =  "start"];
  uint32 end = 2 [json_name =  "end"];
}

message ProtoICMPInfo {
  int32 type = 1 [json_name =  "type"];
  int32 code = 2 [json_name =  "code"];
}

message ProtoSecurityGroupRule {
  string protocol = 1;
  repeated string destinations = 2;
  repeated uint32 ports = 3 [packed = false];
  ProtoPortRange port_range = 4 [json_name = "port_range"];
  ProtoICMPInfo icmp_info = 5 [json_name = "icmp_info"];
  bool log = 6 [json_name = "log"];
  repeated string annotations = 7;
}
